src/test/deca/context/valid/ContextAvecObjet/ManipulationClasse/methodCalledFieldInheritanceArg.deca
// Description:
//  Appel d'une méthode avec un argument dans l'initialisation d'un attribut d'une classe fille
//
// Resultats:
//    ok

class A {
    int x = -1;

    int getX(int y){
        return x+y;
    }

    void setX(int a){
        x = this.getX(a);
    }
}

class B extends A{
    int y;
    int x = this.getX(y);
}



