src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/returnInexistantType.deca
// Description:
//    Déclaration d'une méthode qui renvoie un tyype inexistant
//
// Resultats:
//    Erreur contextuelle ligne 11
//    type non défini
class A{

    int x;

    B setX(int y){
        x = y;
    }
}
